# Rosetta

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config_parser.c  file-format.txt
.github/workflows/: cmake.yml  codeql.yml
src/: config.c  configs.c  configs.h  drivers.c  drivers.h  font.h  fs.c  fs.h  hid_dev.h  led.c  main.c  output.c  pio_config.h  screen.c  settings.h  setup.c  setup.h  splash.h  ssd1306.c  ssd1306.h  structs.h  temp_configs.c  text.c  text.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_device.c  usb_host.c  watchdog.h
